Dashy Smash entry updated.

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -69,25 +69,24 @@ html(lang="en")
                             "../images/thumb-getreact0.png, " +
                             "../images/thumb-getreact1.png, " +
                             "../images/thumb-getreact2.png, " +
-                            "../images/thumb-getreact3.png, " +
-                            "../images/thumb-getreact4.png, " +
-                            "../images/thumb-getreact5.png")
+                            "../images/thumb-getreact3.png")
                             img.thumb-icon(src="../images/icon-getreact.png")
-                            div.thumb-image-dim(style="background-color: #537699")
+                            div.thumb-image-dim(style="background-color: #635d88")
                         div.feature-frame
                             p.thumb-title Dashy Smash
-                            p.thumb-desc Wild jet-pack arcade with cobwebs and a twist!
+                            p.thumb-desc Face smashing jetpack runner arcade in retro style
                             div.thumb-links-pane
-                                p.thumb-available-text Re-release soon:
+                                p.thumb-available-text Available now on:
                                 div(style="display: inline-block")
                                     a.btn-app-link.appstore.disabled(href="#")
                                         img.soon-badge(src="../images/soon-badge.png")
-                                    a.btn-app-link.android.disabled(href="#")
-                                        img.soon-badge(src="../images/soon-badge.png")
-                                    a.btn-app-link.web(
+                                    a.btn-app-link.android(
                                         target="_blank",
-                                        href="http://crashinvaders.com/getreact")
-                                div.thumb-release-date-text --- 2015 ---
+                                        href="https://play.google.com/store/apps/details?id=com.crashinvaders.dashysmash")
+                                    //a.btn-app-link.web(
+                                    //    target="_blank",
+                                    //    href="http://crashinvaders.com/getreact")
+                                div.thumb-release-date-text --- 2023 <span class="faded">/ 2015</span> ---
 
                     div.feature-item
                         div.thumb-image-container
