--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -298,6 +298,10 @@ a {
   font-size: 12px;
   margin-top: 4px;
   margin-bottom: 2px;
+
+  span.faded {
+    color: #c8a190;
+  }
 }
 .btn-app-link {
   margin: 0 4px;
