Fix libGDX spelling.

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -256,7 +256,7 @@ html(lang="en")
                             div.thumb-image-dim(style="background-color: #999290")
                         div.feature-frame
                             p.thumb-title.smaller GDX Texture Packer
-                            p.thumb-desc Packs and manages texture atlases for LibGDX game framework
+                            p.thumb-desc Packs and manages texture atlases for libGDX game framework
                             div.thumb-links-pane
                                 p.thumb-available-text Read more:
                                 div(style="display: inline-block")
@@ -272,7 +272,7 @@ html(lang="en")
                             div.thumb-image-dim(style="background-color: #69558d")
                         div.feature-frame
                             p.thumb-title GDX VFX
-                            p.thumb-desc LibGDX post-processing visual effects library
+                            p.thumb-desc libGDX post-processing visual effects library
                             div.thumb-links-pane
                                 p.thumb-available-text Read more:
                                 div(style="display: inline-block")
@@ -288,7 +288,7 @@ html(lang="en")
                             div.thumb-image-dim(style="background-color: #87a8a8")
                         div.feature-frame
                             p.thumb-title.smaller GDX Basis Universal
-                            p.thumb-desc Basis Universal supercompressed GPU textures for LibGDX game framework.
+                            p.thumb-desc Basis Universal supercompressed GPU textures for libGDX game framework.
                             div.thumb-links-pane
                                 p.thumb-available-text Read more:
                                 div(style="display: inline-block")
