Re-release notice for Dashy Smash.

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -74,17 +74,19 @@ html(lang="en")
                             p.thumb-title Dashy Smash
                             p.thumb-desc Face smashing jetpack runner arcade in retro style
                             div.thumb-links-pane
-                                p.thumb-available-text Available now on:
+                                p.thumb-available-text Re-release soon!
                                 div(style="display: inline-block")
                                     a.btn-app-link.appstore.disabled(href="#")
                                         img.soon-badge(src="../images/soon-badge.png")
-                                    a.btn-app-link.android(
-                                        target="_blank",
-                                        href="https://play.google.com/store/apps/details?id=com.crashinvaders.dashysmash")
-                                    //- a.btn-app-link.web(
-                                    //-    target="_blank",
-                                    //-    href="http://crashinvaders.com/getreact")
-                                div.thumb-release-date-text --- 2023 <span class="faded">/ 2015</span> ---
+                                    //- a.btn-app-link.android(
+                                    //-     target="_blank",
+                                    //-     href="https://play.google.com/store/apps/details?id=com.crashinvaders.dashysmash")
+                                    a.btn-app-link.android.disabled(href="#")
+                                        img.soon-badge(src="../images/soon-badge.png")
+                                    a.btn-app-link.web(
+                                       target="_blank",
+                                       href="http://crashinvaders.com/getreact")
+                                div.thumb-release-date-text --- <span class="faded">2015 /</span> 2023 ---
 
                     div.feature-item
                         div.thumb-image-container
@@ -100,7 +102,7 @@ html(lang="en")
                             p.thumb-title Jolly Pet
                             p.thumb-desc Simple yet beautiful game for your beloved pet
                             div.thumb-links-pane
-                                p.thumb-available-text Available now on:
+                                p.thumb-available-text Available now
                                 div(style="display: inline-block")
                                     a.btn-app-link.appstore(
                                         target="_blank",
@@ -123,7 +125,7 @@ html(lang="en")
                             p.thumb-title Seven
                             p.thumb-desc One of the most popular drinking games on the mobile market
                             div.thumb-links-pane
-                                p.thumb-available-text Available now on:
+                                p.thumb-available-text Available now
                                 div(style="display: inline-block")
                                     a.btn-app-link.appstore(
                                         target="_blank",
@@ -160,7 +162,7 @@ html(lang="en")
                             p.thumb-title.small Fridge Party
                             p.thumb-desc Feed the hungry cats with whatever you find in households' fridges before they wake up!
                             div.thumb-links-pane
-                                p.thumb-available-text Available now on:
+                                p.thumb-available-text Available now
                                 div(style="display: inline-block")
                                     a.btn-app-link.appstore(
                                         target="_blank",
@@ -185,7 +187,7 @@ html(lang="en")
                             p.thumb-title.small Flying With Icarus
                             p.thumb-desc Greek mythology flavoured arcade for kids
                             div.thumb-links-pane
-                                p.thumb-available-text Available now on:
+                                p.thumb-available-text Available now
                                 div(style="display: inline-block")
                                     a.btn-app-link.appstore(
                                         target="_blank",
@@ -215,7 +217,7 @@ html(lang="en")
                             p.thumb-title.small Trashville Incident
                             p.thumb-desc Slice up your monster and kick all the orcs away
                             div.thumb-links-pane
-                                p.thumb-available-text Play it now on:
+                                p.thumb-available-text Play it now
                                 div(style="display: inline-block")
                                     a.btn-app-link.web(
                                         target="_blank",
@@ -235,7 +237,7 @@ html(lang="en")
                             p.thumb-title The Last Pals
                             p.thumb-desc Wisely gather your company and beat an opponent
                             div.thumb-links-pane
-                                p.thumb-available-text Play it now on:
+                                p.thumb-available-text Play it now
                                 div(style="display: inline-block")
                                     a.btn-app-link.web(
                                         target="_blank",
@@ -258,7 +260,7 @@ html(lang="en")
                             p.thumb-title.smaller GDX Texture Packer
                             p.thumb-desc Packs and manages texture atlases for libGDX game framework
                             div.thumb-links-pane
-                                p.thumb-available-text Read more:
+                                p.thumb-available-text Read more at
                                 div(style="display: inline-block")
                                     a.btn-app-link.github(
                                         target="_blank",
@@ -274,7 +276,7 @@ html(lang="en")
                             p.thumb-title GDX VFX
                             p.thumb-desc libGDX post-processing visual effects library
                             div.thumb-links-pane
-                                p.thumb-available-text Read more:
+                                p.thumb-available-text Read more at
                                 div(style="display: inline-block")
                                     a.btn-app-link.github(
                                         target="_blank",
@@ -290,7 +292,7 @@ html(lang="en")
                             p.thumb-title.smaller GDX Basis Universal
                             p.thumb-desc Basis Universal supercompressed GPU textures for libGDX game framework.
                             div.thumb-links-pane
-                                p.thumb-available-text Read more:
+                                p.thumb-available-text Read more at
                                 div(style="display: inline-block")
                                     a.btn-app-link.github(
                                         target="_blank",
