Store links for Dashy Smash. Play icon size increased.

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -74,15 +74,18 @@ html(lang="en")
                             p.thumb-title Dashy Smash
                             p.thumb-desc Face smashing jetpack runner arcade in retro style
                             div.thumb-links-pane
-                                p.thumb-available-text Re-release soon!
+                                p.thumb-available-text Play now at
                                 div(style="display: inline-block")
-                                    a.btn-app-link.appstore.disabled(href="#")
-                                        img.soon-badge(src="../images/soon-badge.png")
-                                    //- a.btn-app-link.android(
-                                    //-     target="_blank",
-                                    //-     href="https://play.google.com/store/apps/details?id=com.crashinvaders.dashysmash")
-                                    a.btn-app-link.android.disabled(href="#")
-                                        img.soon-badge(src="../images/soon-badge.png")
+                                    a.btn-app-link.appstore(
+                                        target="_blank",
+                                        href="https://apps.apple.com/app/id1607505919")
+                                    //- a.btn-app-link.appstore.disabled(href="#")
+                                    //-     img.soon-badge(src="../images/soon-badge.png")
+                                    a.btn-app-link.android(
+                                        target="_blank",
+                                        href="https://play.google.com/store/apps/details?id=com.crashinvaders.dashysmash")
+                                    //- a.btn-app-link.android.disabled(href="#")
+                                    //-     img.soon-badge(src="../images/soon-badge.png")
                                     a.btn-app-link.web(
                                        target="_blank",
                                        href="http://crashinvaders.com/getreact")
@@ -102,11 +105,11 @@ html(lang="en")
                             p.thumb-title Jolly Pet
                             p.thumb-desc Simple yet beautiful game for your beloved pet
                             div.thumb-links-pane
-                                p.thumb-available-text Available now
+                                p.thumb-available-text Play now at
                                 div(style="display: inline-block")
                                     a.btn-app-link.appstore(
                                         target="_blank",
-                                        href="https://itunes.apple.com/app/id1153421262")
+                                        href="https://apps.apple.com/app/id1232195731")
                                     a.btn-app-link.android(
                                         target="_blank",
                                         href="https://play.google.com/store/apps/details?id=com.crashinvaders.jollypet")
@@ -122,14 +125,14 @@ html(lang="en")
                             img.thumb-icon(src="../images/icon-seven.png")
                             div.thumb-image-dim(style="background-color: #4d7b93")
                         div.feature-frame
-                            p.thumb-title Seven
-                            p.thumb-desc One of the most popular drinking games on the mobile market
+                            p.thumb-title Seven: Drinking Game
+                            p.thumb-desc The best party starter
                             div.thumb-links-pane
-                                p.thumb-available-text Available now
+                                p.thumb-available-text Play now at
                                 div(style="display: inline-block")
                                     a.btn-app-link.appstore(
                                         target="_blank",
-                                        href="https://itunes.apple.com/app/id1097472871")
+                                        href="https://apps.apple.com/app/id1097472871")
                                     a.btn-app-link.android(
                                         target="_blank",
                                         href="https://play.google.com/store/apps/details?id=com.crashinvaders.seven")
@@ -160,9 +163,9 @@ html(lang="en")
                             div.thumb-image-dim(style="background-color: #434f6b")
                         div.feature-frame
                             p.thumb-title.small Fridge Party
-                            p.thumb-desc Feed the hungry cats with whatever you find in households' fridges before they wake up!
+                            p.thumb-desc Feed the hungry cats with whatever you find in households' fridges
                             div.thumb-links-pane
-                                p.thumb-available-text Available now
+                                p.thumb-available-text Play now at
                                 div(style="display: inline-block")
                                     a.btn-app-link.appstore(
                                         target="_blank",
@@ -187,7 +190,7 @@ html(lang="en")
                             p.thumb-title.small Flying With Icarus
                             p.thumb-desc Greek mythology flavoured arcade for kids
                             div.thumb-links-pane
-                                p.thumb-available-text Available now
+                                p.thumb-available-text Play now at
                                 div(style="display: inline-block")
                                     a.btn-app-link.appstore(
                                         target="_blank",
@@ -217,7 +220,7 @@ html(lang="en")
                             p.thumb-title.small Trashville Incident
                             p.thumb-desc Slice up your monster and kick all the orcs away
                             div.thumb-links-pane
-                                p.thumb-available-text Play it now
+                                p.thumb-available-text Play now at
                                 div(style="display: inline-block")
                                     a.btn-app-link.web(
                                         target="_blank",
@@ -237,7 +240,7 @@ html(lang="en")
                             p.thumb-title The Last Pals
                             p.thumb-desc Wisely gather your company and beat an opponent
                             div.thumb-links-pane
-                                p.thumb-available-text Play it now
+                                p.thumb-available-text Play now at
                                 div(style="display: inline-block")
                                     a.btn-app-link.web(
                                         target="_blank",
