Move petool to commercial section.

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -73,7 +73,7 @@ html(lang="en")
                             p.thumb-title Dashy Smash
                             p.thumb-desc Face smashing jetpack runner arcade in retro style
                             div.thumb-links-pane
-                                p.thumb-available-text Play now at
+                                p.thumb-available-text Play now
                                 div(style="display: inline-block")
                                     a.btn-app-link.appstore(
                                         target="_blank",
@@ -93,30 +93,6 @@ html(lang="en")
                     div.feature-item
                         div.thumb-image-container
                             div.cycler(data-thumb-cycle-images=
-                            "../images/thumb-jdog0.png, " +
-                            "../images/thumb-jdog1.png, " +
-                            "../images/thumb-jdog2.png, " +
-                            "../images/thumb-jdog3.png, " +
-                            "../images/thumb-jdog4.png")
-                            img.thumb-icon(src="../images/icon-jdog.png")
-                            div.thumb-image-dim(style="background-color: #a8853f")
-                        div.feature-frame
-                            p.thumb-title Jolly Pet
-                            p.thumb-desc Simple yet beautiful game for your beloved pet
-                            div.thumb-links-pane
-                                p.thumb-available-text Play now at
-                                div(style="display: inline-block")
-                                    a.btn-app-link.appstore(
-                                        target="_blank",
-                                        href="https://apps.apple.com/app/id1232195731")
-                                    a.btn-app-link.android(
-                                        target="_blank",
-                                        href="https://play.google.com/store/apps/details?id=com.crashinvaders.jollypet")
-                                div.thumb-release-date-text --- 2016 ---
-
-                    div.feature-item
-                        div.thumb-image-container
-                            div.cycler(data-thumb-cycle-images=
                             "../images/thumb-seven0.png, " +
                             "../images/thumb-seven1.png, " +
                             "../images/thumb-seven2.png, " +
@@ -127,7 +103,7 @@ html(lang="en")
                             p.thumb-title Seven: Drinking Game
                             p.thumb-desc The best party starter
                             div.thumb-links-pane
-                                p.thumb-available-text Play now at
+                                p.thumb-available-text Play now
                                 div(style="display: inline-block")
                                     a.btn-app-link.appstore(
                                         target="_blank",
@@ -154,6 +130,30 @@ html(lang="en")
                     div.feature-item
                         div.thumb-image-container
                             div.cycler(data-thumb-cycle-images=
+                            "../images/thumb-jdog0.png, " +
+                            "../images/thumb-jdog1.png, " +
+                            "../images/thumb-jdog2.png, " +
+                            "../images/thumb-jdog3.png, " +
+                            "../images/thumb-jdog4.png")
+                            img.thumb-icon(src="../images/icon-jdog.png")
+                            div.thumb-image-dim(style="background-color: #a8853f")
+                        div.feature-frame
+                            p.thumb-title Jolly Pet
+                            p.thumb-desc Simple yet beautiful game for your beloved pet
+                            div.thumb-links-pane
+                                p.thumb-available-text Play now
+                                div(style="display: inline-block")
+                                    a.btn-app-link.appstore(
+                                        target="_blank",
+                                        href="https://apps.apple.com/app/id1232195731")
+                                    a.btn-app-link.android(
+                                        target="_blank",
+                                        href="https://play.google.com/store/apps/details?id=com.crashinvaders.jollypet")
+                                div.thumb-release-date-text --- 2016 ---
+
+                    div.feature-item
+                        div.thumb-image-container
+                            div.cycler(data-thumb-cycle-images=
                             "../images/thumb-fridge-party0.png, " +
                             "../images/thumb-fridge-party1.png, " +
                             "../images/thumb-fridge-party2.png, " +
@@ -164,7 +164,7 @@ html(lang="en")
                             p.thumb-title.small Fridge Party
                             p.thumb-desc Feed the hungry cats with whatever you find in households' fridges
                             div.thumb-links-pane
-                                p.thumb-available-text Play now at
+                                p.thumb-available-text Play now
                                 div(style="display: inline-block")
                                     a.btn-app-link.appstore(
                                         target="_blank",
@@ -189,7 +189,7 @@ html(lang="en")
                             p.thumb-title.small Flying With Icarus
                             p.thumb-desc Greek mythology flavoured arcade for kids
                             div.thumb-links-pane
-                                p.thumb-available-text Play now at
+                                p.thumb-available-text Play now
                                 div(style="display: inline-block")
                                     a.btn-app-link.appstore(
                                         target="_blank",
@@ -220,7 +220,7 @@ html(lang="en")
                                 br
                                 | Be fun or be canceled.
                             div.thumb-links-pane
-                                p.thumb-available-text Play now at
+                                p.thumb-available-text Play now
                                 div(style="display: inline-block")
                                     a.btn-app-link.web(
                                         target="_blank",
@@ -243,7 +243,7 @@ html(lang="en")
                             p.thumb-title.small Trashville Incident
                             p.thumb-desc Slice up your monster and kick all the orcs away
                             div.thumb-links-pane
-                                p.thumb-available-text Play now at
+                                p.thumb-available-text Play now
                                 div(style="display: inline-block")
                                     a.btn-app-link.web(
                                         target="_blank",
@@ -266,7 +266,7 @@ html(lang="en")
                             p.thumb-title The Last Pals
                             p.thumb-desc Wisely gather your company and beat an opponent
                             div.thumb-links-pane
-                                p.thumb-available-text Play now at
+                                p.thumb-available-text Play now
                                 div(style="display: inline-block")
                                     a.btn-app-link.web(
                                         target="_blank",
@@ -292,7 +292,7 @@ html(lang="en")
                             p.thumb-title.smaller GDX Texture Packer
                             p.thumb-desc Packs and manages texture atlases for libGDX game framework
                             div.thumb-links-pane
-                                p.thumb-available-text Read more at
+                                p.thumb-available-text Read more
                                 div(style="display: inline-block")
                                     a.btn-app-link.github(
                                         target="_blank",
@@ -308,7 +308,7 @@ html(lang="en")
                             p.thumb-title GDX VFX
                             p.thumb-desc libGDX post-processing visual effects library
                             div.thumb-links-pane
-                                p.thumb-available-text Read more at
+                                p.thumb-available-text Read more
                                 div(style="display: inline-block")
                                     a.btn-app-link.github(
                                         target="_blank",
@@ -324,7 +324,7 @@ html(lang="en")
                             p.thumb-title.smaller GDX Basis Universal
                             p.thumb-desc Basis Universal supercompressed GPU textures for libGDX game framework.
                             div.thumb-links-pane
-                                p.thumb-available-text Read more at
+                                p.thumb-available-text Read more
                                 div(style="display: inline-block")
                                     a.btn-app-link.github(
                                         target="_blank",
